--- a/csetting.ui
+++ b/csetting.ui
@@ -23,7 +23,7 @@
       <enum>QTabWidget::Rounded</enum>
      </property>
      <property name="currentIndex">
-      <number>3</number>
+      <number>7</number>
      </property>
      <property name="documentMode">
       <bool>false</bool>
@@ -1146,14 +1146,43 @@
                   <item>
                    <layout class="QVBoxLayout" name="verticalLayout_83">
                     <item>
-                     <widget class="QLabel" name="label_106">
+                     <widget class="QRadioButton" name="radioButton_5">
                       <property name="text">
-                       <string>Hide DSO with prefix. Separated by ;</string>
+                       <string>Show</string>
                       </property>
                      </widget>
                     </item>
                     <item>
-                     <widget class="QLineEdit" name="le_dso_filter"/>
+                     <widget class="QRadioButton" name="radioButton_6">
+                      <property name="text">
+                       <string>Hide</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QLabel" name="label_106">
+                      <property name="text">
+                       <string>Filter DSO with prefix. Separated by ;</string>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <layout class="QHBoxLayout" name="horizontalLayout_3">
+                      <item>
+                       <widget class="QLineEdit" name="le_dso_filter"/>
+                      </item>
+                      <item>
+                       <widget class="QToolButton" name="toolButton_3">
+                        <property name="text">
+                         <string/>
+                        </property>
+                        <property name="icon">
+                         <iconset resource="resource.qrc">
+                          <normaloff>:/res/ico_reset_all.png</normaloff>:/res/ico_reset_all.png</iconset>
+                        </property>
+                       </widget>
+                      </item>
+                     </layout>
                     </item>
                     <item>
                      <widget class="QLabel" name="label_105">
@@ -5472,11 +5501,20 @@ then PLAN404 or VSOP87 is used</string>
       <layout class="QVBoxLayout" name="verticalLayout_13">
        <item>
         <widget class="QTabWidget" name="tabWidget_2">
+         <property name="tabShape">
+          <enum>QTabWidget::Rounded</enum>
+         </property>
          <property name="currentIndex">
-          <number>3</number>
+          <number>5</number>
          </property>
          <property name="elideMode">
           <enum>Qt::ElideNone</enum>
+         </property>
+         <property name="usesScrollButtons">
+          <bool>true</bool>
+         </property>
+         <property name="documentMode">
+          <bool>false</bool>
          </property>
          <widget class="QWidget" name="tab_8">
           <attribute name="title">
@@ -5700,6 +5738,52 @@ then PLAN404 or VSOP87 is used</string>
              </item>
              <item>
               <spacer name="horizontalSpacer_17">
+               <property name="orientation">
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeHint" stdset="0">
+                <size>
+                 <width>40</width>
+                 <height>20</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+            </layout>
+           </item>
+          </layout>
+         </widget>
+         <widget class="QWidget" name="tab_21">
+          <attribute name="title">
+           <string>HiPS</string>
+          </attribute>
+          <layout class="QVBoxLayout" name="verticalLayout_116">
+           <item>
+            <widget class="QTreeWidget" name="treeWidgetHiPS">
+             <property name="contextMenuPolicy">
+              <enum>Qt::CustomContextMenu</enum>
+             </property>
+             <property name="alternatingRowColors">
+              <bool>true</bool>
+             </property>
+             <column>
+              <property name="text">
+               <string notr="true">1</string>
+              </property>
+             </column>
+            </widget>
+           </item>
+           <item>
+            <layout class="QHBoxLayout" name="horizontalLayout_34">
+             <item>
+              <widget class="QPushButton" name="pushButton_76">
+               <property name="text">
+                <string>Reset to default</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <spacer name="horizontalSpacer_26">
                <property name="orientation">
                 <enum>Qt::Horizontal</enum>
                </property>
@@ -5977,7 +6061,9 @@ then PLAN404 or VSOP87 is used</string>
    <container>1</container>
   </customwidget>
  </customwidgets>
- <resources/>
+ <resources>
+  <include location="resource.qrc"/>
+ </resources>
  <connections>
   <connection>
    <sender>horizontalSlider_13</sender>
