--- a/cephlist.ui
+++ b/cephlist.ui
@@ -311,7 +311,11 @@
                 </widget>
                </item>
                <item>
-                <widget class="QComboBox" name="cb_g1"/>
+                <widget class="QComboBox" name="cb_g1">
+                 <property name="maxVisibleItems">
+                  <number>20</number>
+                 </property>
+                </widget>
                </item>
                <item>
                 <widget class="QLabel" name="label_5">
@@ -321,7 +325,11 @@
                 </widget>
                </item>
                <item>
-                <widget class="QComboBox" name="cb_g2"/>
+                <widget class="QComboBox" name="cb_g2">
+                 <property name="maxVisibleItems">
+                  <number>20</number>
+                 </property>
+                </widget>
                </item>
                <item>
                 <spacer name="verticalSpacer">
