--- a/resource.qrc
+++ b/resource.qrc
@@ -154,5 +154,140 @@
         <file>res/sh_shower.png</file>
         <file>res/aladin.png</file>
         <file>res/healpix_grid.png</file>
+        <file>res/qt/cdr-16.png</file>
+        <file>res/qt/cdr-32.png</file>
+        <file>res/qt/cdr-128.png</file>
+        <file>res/qt/cleartext-16.png</file>
+        <file>res/qt/cleartext-32.png</file>
+        <file>res/qt/closedock-16.png</file>
+        <file>res/qt/closedock-down-16.png</file>
+        <file>res/qt/computer-16.png</file>
+        <file>res/qt/computer-32.png</file>
+        <file>res/qt/desktop-16.png</file>
+        <file>res/qt/desktop-32.png</file>
+        <file>res/qt/dirclosed-16.png</file>
+        <file>res/qt/dirclosed-32.png</file>
+        <file>res/qt/dirclosed-128.png</file>
+        <file>res/qt/dirlink-16.png</file>
+        <file>res/qt/dirlink-32.png</file>
+        <file>res/qt/dirlink-128.png</file>
+        <file>res/qt/diropen-16.png</file>
+        <file>res/qt/diropen-32.png</file>
+        <file>res/qt/diropen-128.png</file>
+        <file>res/qt/dockdock-16.png</file>
+        <file>res/qt/dockdock-down-16.png</file>
+        <file>res/qt/down-16.png</file>
+        <file>res/qt/down-32.png</file>
+        <file>res/qt/down-128.png</file>
+        <file>res/qt/dvd-16.png</file>
+        <file>res/qt/dvd-32.png</file>
+        <file>res/qt/dvd-128.png</file>
+        <file>res/qt/file-16.png</file>
+        <file>res/qt/file-32.png</file>
+        <file>res/qt/file-128.png</file>
+        <file>res/qt/filecontents-16.png</file>
+        <file>res/qt/filecontents-32.png</file>
+        <file>res/qt/filecontents-128.png</file>
+        <file>res/qt/fileinfo-16.png</file>
+        <file>res/qt/fileinfo-32.png</file>
+        <file>res/qt/fileinfo-128.png</file>
+        <file>res/qt/filelink-16.png</file>
+        <file>res/qt/filelink-32.png</file>
+        <file>res/qt/filelink-128.png</file>
+        <file>res/qt/floppy-16.png</file>
+        <file>res/qt/floppy-32.png</file>
+        <file>res/qt/floppy-128.png</file>
+        <file>res/qt/fontbitmap-16.png</file>
+        <file>res/qt/fonttruetype-16.png</file>
+        <file>res/qt/fusion_arrow.png</file>
+        <file>res/qt/fusion_groupbox.png</file>
+        <file>res/qt/harddrive-16.png</file>
+        <file>res/qt/harddrive-32.png</file>
+        <file>res/qt/harddrive-128.png</file>
+        <file>res/qt/left-16.png</file>
+        <file>res/qt/left-32.png</file>
+        <file>res/qt/left-128.png</file>
+        <file>res/qt/media-pause-16.png</file>
+        <file>res/qt/media-pause-32.png</file>
+        <file>res/qt/media-play-16.png</file>
+        <file>res/qt/media-play-32.png</file>
+        <file>res/qt/media-seek-backward-16.png</file>
+        <file>res/qt/media-seek-backward-32.png</file>
+        <file>res/qt/media-seek-forward-16.png</file>
+        <file>res/qt/media-seek-forward-32.png</file>
+        <file>res/qt/media-skip-backward-16.png</file>
+        <file>res/qt/media-skip-backward-32.png</file>
+        <file>res/qt/media-skip-forward-16.png</file>
+        <file>res/qt/media-skip-forward-32.png</file>
+        <file>res/qt/media-stop-16.png</file>
+        <file>res/qt/media-stop-32.png</file>
+        <file>res/qt/media-volume-16.png</file>
+        <file>res/qt/media-volume-muted-16.png</file>
+        <file>res/qt/networkdrive-16.png</file>
+        <file>res/qt/networkdrive-32.png</file>
+        <file>res/qt/networkdrive-128.png</file>
+        <file>res/qt/newdirectory-16.png</file>
+        <file>res/qt/newdirectory-32.png</file>
+        <file>res/qt/newdirectory-128.png</file>
+        <file>res/qt/parentdir-16.png</file>
+        <file>res/qt/parentdir-32.png</file>
+        <file>res/qt/parentdir-128.png</file>
+        <file>res/qt/refresh-24.png</file>
+        <file>res/qt/refresh-32.png</file>
+        <file>res/qt/right-16.png</file>
+        <file>res/qt/right-32.png</file>
+        <file>res/qt/right-128.png</file>
+        <file>res/qt/standardbutton-apply-16.png</file>
+        <file>res/qt/standardbutton-apply-32.png</file>
+        <file>res/qt/standardbutton-apply-128.png</file>
+        <file>res/qt/standardbutton-cancel-16.png</file>
+        <file>res/qt/standardbutton-cancel-32.png</file>
+        <file>res/qt/standardbutton-cancel-128.png</file>
+        <file>res/qt/standardbutton-clear-16.png</file>
+        <file>res/qt/standardbutton-clear-32.png</file>
+        <file>res/qt/standardbutton-clear-128.png</file>
+        <file>res/qt/standardbutton-close-16.png</file>
+        <file>res/qt/standardbutton-close-32.png</file>
+        <file>res/qt/standardbutton-close-128.png</file>
+        <file>res/qt/standardbutton-closetab-16.png</file>
+        <file>res/qt/standardbutton-closetab-down-16.png</file>
+        <file>res/qt/standardbutton-closetab-hover-16.png</file>
+        <file>res/qt/standardbutton-delete-16.png</file>
+        <file>res/qt/standardbutton-delete-32.png</file>
+        <file>res/qt/standardbutton-delete-128.png</file>
+        <file>res/qt/standardbutton-help-16.png</file>
+        <file>res/qt/standardbutton-help-32.png</file>
+        <file>res/qt/standardbutton-help-128.png</file>
+        <file>res/qt/standardbutton-no-16.png</file>
+        <file>res/qt/standardbutton-no-32.png</file>
+        <file>res/qt/standardbutton-no-128.png</file>
+        <file>res/qt/standardbutton-ok-16.png</file>
+        <file>res/qt/standardbutton-ok-32.png</file>
+        <file>res/qt/standardbutton-ok-128.png</file>
+        <file>res/qt/standardbutton-open-16.png</file>
+        <file>res/qt/standardbutton-open-32.png</file>
+        <file>res/qt/standardbutton-open-128.png</file>
+        <file>res/qt/standardbutton-save-16.png</file>
+        <file>res/qt/standardbutton-save-32.png</file>
+        <file>res/qt/standardbutton-save-128.png</file>
+        <file>res/qt/standardbutton-yes-16.png</file>
+        <file>res/qt/standardbutton-yes-32.png</file>
+        <file>res/qt/standardbutton-yes-128.png</file>
+        <file>res/qt/stop-24.png</file>
+        <file>res/qt/stop-32.png</file>
+        <file>res/qt/toolbar-ext.png</file>
+        <file>res/qt/toolbar-ext@2x.png</file>
+        <file>res/qt/trash-16.png</file>
+        <file>res/qt/trash-32.png</file>
+        <file>res/qt/trash-128.png</file>
+        <file>res/qt/up-16.png</file>
+        <file>res/qt/up-32.png</file>
+        <file>res/qt/up-128.png</file>
+        <file>res/qt/viewdetailed-16.png</file>
+        <file>res/qt/viewdetailed-32.png</file>
+        <file>res/qt/viewdetailed-128.png</file>
+        <file>res/qt/viewlist-16.png</file>
+        <file>res/qt/viewlist-32.png</file>
+        <file>res/qt/viewlist-128.png</file>
     </qresource>
 </RCC>
