--- a/resource.qrc
+++ b/resource.qrc
@@ -289,5 +289,6 @@
         <file>res/qt/viewlist-16.png</file>
         <file>res/qt/viewlist-32.png</file>
         <file>res/qt/viewlist-128.png</file>
+        <file>res/hammer_mask.png</file>
     </qresource>
 </RCC>
