--- a/cephlist.ui
+++ b/cephlist.ui
@@ -194,7 +194,7 @@
            <item>
             <widget class="QTabWidget" name="tabWidget_2">
              <property name="currentIndex">
-              <number>0</number>
+              <number>1</number>
              </property>
              <widget class="QWidget" name="tab_4">
               <attribute name="title">
@@ -311,11 +311,22 @@
                 </widget>
                </item>
                <item>
-                <widget class="QComboBox" name="cb_g1">
-                 <property name="maxVisibleItems">
-                  <number>20</number>
-                 </property>
-                </widget>
+                <layout class="QHBoxLayout" name="horizontalLayout_10" stretch="2,1">
+                 <item>
+                  <widget class="QComboBox" name="cb_g1">
+                   <property name="maxVisibleItems">
+                    <number>20</number>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QCheckBox" name="cb_axis1">
+                   <property name="text">
+                    <string>Invert axis</string>
+                   </property>
+                  </widget>
+                 </item>
+                </layout>
                </item>
                <item>
                 <widget class="QLabel" name="label_5">
@@ -325,11 +336,22 @@
                 </widget>
                </item>
                <item>
-                <widget class="QComboBox" name="cb_g2">
-                 <property name="maxVisibleItems">
-                  <number>20</number>
-                 </property>
-                </widget>
+                <layout class="QHBoxLayout" name="horizontalLayout_11" stretch="2,1">
+                 <item>
+                  <widget class="QComboBox" name="cb_g2">
+                   <property name="maxVisibleItems">
+                    <number>20</number>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QCheckBox" name="cb_axis2">
+                   <property name="text">
+                    <string>Invert axis</string>
+                   </property>
+                  </widget>
+                 </item>
+                </layout>
                </item>
                <item>
                 <spacer name="verticalSpacer">
