--- a/resource.qrc
+++ b/resource.qrc
@@ -290,5 +290,6 @@
         <file>res/qt/viewlist-32.png</file>
         <file>res/qt/viewlist-128.png</file>
         <file>res/hammer_mask.png</file>
+        <file>res/vo_cat.png</file>
     </qresource>
 </RCC>
